# atomix

./: .gitattributes  .gitignore  CLAUDE.md  CMakeDarwinPresets.json  CMakeLinuxPresets.json  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CMakeWindowsPresets.json  Doxyfile  GWidget.cpp  GWidget.hpp  MainWindow.cpp  MainWindow.hpp  README.md  Window.cpp  Window.hpp  atomix.code-workspace  atomix.pro  c_cpp_properties-template.json  main.cpp  program.cpp  program.hpp  quaternion.cpp  quaternion.hpp  settings-scratch.txt  shader.frag  shader.vert  shaderobj.hpp  vcpkg.json
.qt/: QtDeploySupport.cmake
configs/: bubbelah.cloud  default-config.wave  default.wave  genesis.cloud  infinity.cloud  sphere-config.wave  sphere.wave  standard-config.wave  superposition-config.wave  superposition.wave  test-config.wave
doc/: atomix.desktop  installapp_nix.sh
doc/deploy/: macdeploy.sh  nixclean.sh  nixdeploy.sh
doc/deploy/linux/: linuxclean.sh  linuxdeploy.sh
doc/deploy/mac/: Info.plist.in  atomix.entitlements  macclean.sh  macdeploy.sh
doc/deploy/win/: config.xml  winclean.bat  windeploy.bat
doc/deploy/win/meta/: package.xml
doc/scripts/: glslfilter.py
res/icons/: atomix.icns
shaders/: cpu_circle.vert  cpu_sphere.vert  cpu_wave.vert  crystal.frag  crystal.vert  default.frag  default.vert  gpu_circle.vert  gpu_harmonics copy.vert  gpu_harmonics.vert  gpu_harmonics_test.vert  gpu_inten_circle.vert  gpu_ortho_circle.vert  gpu_para_circle.vert  gpu_sphere.vert  gpu_sphere_test.vert  ortho_wave.vert  para_sphere.bak  para_sphere.vert  para_wave.vert  wave.frag  wave.vert  wave2.frag  wavenew.bak
src/: CMakeLists.txt  DockWidget.hbak  GWidget.cpp  GWidget.hpp  MainWindow.cpp  MainWindow.hpp  TODOList.txt  Window.cpp  Window.hpp  builder.hpp  cloudmanager.cpp  cloudmanager.hpp  configparser.cpp  configparser.hpp  filehandler.cpp  filehandler.hpp  global.hpp  glwidget.cpp  glwidget.hpp  gwidget.cpp  gwidget.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  manager.cpp  manager.hpp  orbit.cpp  orbit.hpp  orbitmanager.cpp  orbitmanager.hpp  program.cpp  program.hpp  programGL.cpp  programGL.hpp  programVK.cpp  programVK.hpp  quaternion.cpp  quaternion.hpp  shaderobj.cpp  shaderobj.hpp  (+11 more)
